# clarity

./: .gitignore  AGENTS.md  ENV_VARIABLES.md  PROMPT_HISTORY.project2.txt  PROMPT_HISTORY.txt  README.md  SETUP.md  WAZE_UX_REVAMP.md  app.json  package-lock.json  package.json  prompt_log.hw4.txt  prompt_log.project2.txt
app/: _layout.tsx  check-in.tsx  modal.tsx  quick-report.tsx  wind-down.tsx
app/(tabs)/: _layout.tsx  index.tsx
backend/: .env.example  .gitignore  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/middleware/: auth.py
backend/models/: check_in.py  logs.py  user.py
backend/routers/: check_ins.py  health.py  logs.py  preferences.py  users.py
backend/services/: email_service.py  insight_llm.py  insight_recent_surveys.py  insight_stats.py  reminder_scheduler.py
backend/sql/: user_email_preferences.sql
backend/tests/: test_insight_pipeline.py  test_reminder_scheduler.py
components/: InstallPWA.tsx  QuickReport.tsx
constants/: Colors.ts
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: +not-found.tsx  _layout.tsx  baselines.tsx  check-in.tsx  debug.tsx  history.tsx  insights.tsx  modal.tsx  quick-report.tsx  sign-in.tsx  sso-callback.tsx  survey.tsx  wind-down.tsx
frontend/components/: AuthExample.tsx  ClerkAuth.tsx  EditScreenInfo.tsx  InsightMessageWithCitations.tsx
frontend/contexts/: InsightsContext.tsx
frontend/hooks/: useCurrentUser.ts
public/: index.html  manifest.json
services/: InsightService.ts  NotificationService.ts  StorageService.ts
(+13 files in other folders)
