[project]
name = "clarity-backend"
version = "0.1.0"
description = "FastAPI backend for the Clarity mental health tracking PWA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clerk-backend-api>=5.0.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "supabase>=2.28.0",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
